// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCollectionPage tests should fill initial category scructure correctly when in edit mode and call updateCollection with correct arguments when save button is clicked 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900 flex flex-col"
  >
    <nav
      class="bg-gray-800 border-gray-200 dark:bg-gray-200 w-full border-b dark:border-gray-600"
    >
      <div
        class="max-w-screen-xl flex flex-wrap justify-between mx-auto p-4"
      >
        <div
          class="flex items-center mt-1"
        >
          <h1
            class="logo text-gray-200 dark:text-gray-900 text-6xl "
          >
            ethnopedia
          </h1>
        </div>
        <div
          class="flex items-center md:order-2"
        >
          <button
            class="text-gray-800 bg-white border border-gray-300 focus:outline-none
                           hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm
                           p-2.5 mr-2 dark:bg-gray-800 dark:text-white dark:border-gray-600
                           dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
            type="button"
          >
            <svg
              class="w-4 h-4 m-0.5"
            />
          </button>
          <button
            class="mr-2 bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
            type="button"
          >
            Zaloguj się
          </button>
          <button
            class="bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
            type="button"
          >
            Zarejestruj się
          </button>
        </div>
      </div>
    </nav>
    <div
      class="container mx-auto px-24 sm:px-32 md:px-40 lg:px-48 mt-4 max-w-screen-lg"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-1 md:space-x-2"
        >
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-600"
              href="/"
            >
              Strona główna
            </a>
          </li>
          <span
            class="self-center"
          >
            <svg
              class="w-3 h-3 text-gray-600 dark:text-gray-400"
            />
          </span>
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-600"
              href="/collections/undefined/artworks"
            >
              Kolekcja
            </a>
          </li>
        </ol>
      </nav>
      <div
        class="mt-4"
      >
        <div
          class="bg-white dark:bg-gray-800 rounded-lg shadow-md border dark:border-gray-600 p-8"
        >
          <div
            class="flex items-start rounded-t border-b pb-2"
          >
            <h3
              class="text-2xl font-bold text-gray-900 dark:text-white"
            >
              Edytuj kolekcję
            </h3>
          </div>
          <form
            action="#"
          >
            <label
              class="block text-sm font-bold text-gray-700 dark:text-white my-2"
              for="name"
            >
              Nazwa
            </label>
            <input
              aria-label="name"
              class="w-full px-4 py-2 border rounded-lg text-gray-700 focus:outline-none border-gray-300"
              id="name"
              name="name"
              type="text"
              value="collection name"
            />
            <label
              class="block text-sm font-bold text-gray-700 dark:text-white my-2"
              for="description"
            >
              Opis
            </label>
            <textarea
              aria-label="description"
              class="w-full resize-y mb-8 px-4 py-2 border rounded-lg focus:outline-none dark:border-gray-600 dark:bg-gray-800 border-gray-300"
              id="description"
              name="description"
              rows="4"
            >
              collection description
            </textarea>
            <hr />
            <label
              class="block text-sm mt-4 font-bold text-gray-700 dark:text-white my-2"
            >
              Struktura metadanych w kolekcji
            </label>
            <p
              class="text-sm text-gray-600 dark:text-gray-400 mb-4"
            >
              Podaj strukturę metadanych, które chcesz przechowywać w tej kolekcji...
            </p>
            <div
              class="flex-grow"
            >
              <div
                style="overflow-y: auto;"
              >
                <form>
                  <div
                    class="relative flex flex-col mt-1"
                  >
                    <div
                      class="field-container relative flex items-center"
                    >
                      <label
                        class="flex items-center"
                      >
                        <input
                          class="p-2 border rounded border-gray-300"
                          name="name"
                          placeholder="Podaj nazwę kategorii..."
                          type="text"
                          value="Tytuł"
                        />
                      </label>
                      <div
                        class="actions ml-1 space-x-1"
                      />
                    </div>
                    <div
                      class="children-container ml-8"
                    />
                  </div>
                  <div
                    class="relative flex flex-col mt-1"
                  >
                    <div
                      class="field-container relative flex items-center"
                    >
                      <label
                        class="flex items-center"
                      >
                        <input
                          class="p-2 border rounded border-gray-300"
                          name="name"
                          placeholder="Podaj nazwę kategorii..."
                          type="text"
                          value="Region"
                        />
                      </label>
                      <div
                        class="actions ml-1 space-x-1"
                      />
                    </div>
                    <div
                      class="children-container ml-8"
                    >
                      <div
                        class="relative"
                      >
                        <div
                          class="tree-line vertical-helper"
                        />
                        <div
                          class="relative flex flex-col mt-1"
                        >
                          <div
                            class="field-container relative flex items-center"
                          >
                            <div
                              class="tree-line vertical"
                            />
                            <div
                              class="tree-line horizontal"
                            />
                            <label
                              class="flex items-center"
                            >
                              <input
                                class="p-2 border rounded border-gray-300"
                                name="name"
                                placeholder="Podaj nazwę kategorii..."
                                type="text"
                                value="Podregion"
                              />
                            </label>
                            <div
                              class="actions ml-1 space-x-1"
                            />
                          </div>
                          <div
                            class="children-container ml-8"
                          >
                            <div
                              class="relative"
                            >
                              <div
                                class="tree-line vertical-helper"
                              />
                              <div
                                class="relative flex flex-col mt-1"
                              >
                                <div
                                  class="field-container relative flex items-center"
                                >
                                  <div
                                    class="tree-line vertical"
                                  />
                                  <div
                                    class="tree-line horizontal"
                                  />
                                  <label
                                    class="flex items-center"
                                  >
                                    <input
                                      class="p-2 border rounded border-gray-300"
                                      name="name"
                                      placeholder="Podaj nazwę kategorii..."
                                      type="text"
                                      value="Miasto"
                                    />
                                  </label>
                                  <div
                                    class="actions ml-1 space-x-1"
                                  />
                                </div>
                                <div
                                  class="children-container ml-8"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="relative flex flex-col mt-1"
                  >
                    <div
                      class="field-container relative flex items-center"
                    >
                      <label
                        class="flex items-center"
                      >
                        <input
                          class="p-2 border rounded border-gray-300"
                          name="name"
                          placeholder="Podaj nazwę kategorii..."
                          type="text"
                          value="rok wydania"
                        />
                      </label>
                      <div
                        class="actions ml-1 space-x-1"
                      />
                    </div>
                    <div
                      class="children-container ml-8"
                    />
                  </div>
                  <div
                    class="actions mt-1"
                  >
                    <button
                      title="Dodaj kategorię"
                      type="button"
                    >
                      <svg />
                    </button>
                  </div>
                </form>
                <pre />
              </div>
            </div>
            <div
              class="flex justify-end mt-6"
            >
              <button
                class="px-4 py-2 mr-2"
                type="button"
              >
                Anuluj
              </button>
              <button
                class="px-4 py-2 color-button"
                type="submit"
              >
                Zapisz zmiany
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateCollectionPage tests should render loading state 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900 flex flex-col"
  >
    <nav
      class="bg-gray-800 border-gray-200 dark:bg-gray-200 w-full border-b dark:border-gray-600"
    >
      <div
        class="max-w-screen-xl flex flex-wrap justify-between mx-auto p-4"
      >
        <div
          class="flex items-center mt-1"
        >
          <h1
            class="logo text-gray-200 dark:text-gray-900 text-6xl "
          >
            ethnopedia
          </h1>
        </div>
        <div
          class="flex items-center md:order-2"
        >
          <button
            class="text-gray-800 bg-white border border-gray-300 focus:outline-none
                           hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm
                           p-2.5 mr-2 dark:bg-gray-800 dark:text-white dark:border-gray-600
                           dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
            type="button"
          >
            <svg
              class="w-4 h-4 m-0.5"
            />
          </button>
          <button
            class="mr-2 bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
            type="button"
          >
            Zaloguj się
          </button>
          <button
            class="bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
            type="button"
          >
            Zarejestruj się
          </button>
        </div>
      </div>
    </nav>
    <div
      class="container mx-auto px-24 sm:px-32 md:px-40 lg:px-48 mt-4 max-w-screen-lg"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-1 md:space-x-2"
        >
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-600"
              href="/"
            >
              Strona główna
            </a>
          </li>
          <span
            class="self-center"
          >
            <svg
              class="w-3 h-3 text-gray-600 dark:text-gray-400"
            />
          </span>
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-600"
              href="/collections/undefined/artworks"
            >
              Kolekcja
            </a>
          </li>
        </ol>
      </nav>
      <div
        class="mt-4"
      >
        <div
          class="bg-white dark:bg-gray-800 rounded-lg shadow-md border dark:border-gray-600 p-8"
        >
          <div
            class="flex items-start rounded-t border-b pb-2"
          >
            <h3
              class="text-2xl font-bold text-gray-900 dark:text-white"
            >
              Dodaj nową kolekcję
            </h3>
          </div>
          <form
            action="#"
          >
            <label
              class="block text-sm font-bold text-gray-700 dark:text-white my-2"
              for="name"
            >
              Nazwa
            </label>
            <input
              aria-label="name"
              class="w-full px-4 py-2 border rounded-lg text-gray-700 focus:outline-none border-gray-300"
              id="name"
              name="name"
              type="text"
              value=""
            />
            <label
              class="block text-sm font-bold text-gray-700 dark:text-white my-2"
              for="description"
            >
              Opis
            </label>
            <textarea
              aria-label="description"
              class="w-full resize-y mb-8 px-4 py-2 border rounded-lg focus:outline-none dark:border-gray-600 dark:bg-gray-800 border-gray-300"
              id="description"
              name="description"
              rows="4"
            />
            <hr />
            <label
              class="block text-sm mt-4 font-bold text-gray-700 dark:text-white my-2"
            >
              Struktura metadanych w kolekcji
            </label>
            <p
              class="text-sm text-gray-600 dark:text-gray-400 mb-4"
            >
              Podaj strukturę metadanych, które chcesz przechowywać w tej kolekcji...
            </p>
            <div
              class="flex-grow"
            >
              <div
                style="overflow-y: auto;"
              >
                <form>
                  <div
                    class="relative flex flex-col mt-1"
                  >
                    <div
                      class="field-container relative flex items-center"
                    >
                      <label
                        class="flex items-center"
                      >
                        <input
                          class="p-2 border rounded border-gray-300"
                          name="name"
                          placeholder="Podaj nazwę kategorii..."
                          type="text"
                          value=""
                        />
                      </label>
                      <div
                        class="actions ml-1 space-x-1"
                      />
                    </div>
                    <div
                      class="children-container ml-8"
                    />
                  </div>
                  <div
                    class="actions mt-1"
                  >
                    <button
                      title="Dodaj kategorię"
                      type="button"
                    >
                      <svg />
                    </button>
                  </div>
                </form>
                <pre />
              </div>
            </div>
            <div
              class="flex justify-end mt-6"
            >
              <button
                class="px-4 py-2 mr-2"
                type="button"
              >
                Anuluj
              </button>
              <button
                class="px-4 py-2 color-button"
                type="submit"
              >
                Utwórz
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
